--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,6 @@ authors = ["Sheheryar Parvaz <me@cherryman.org>"]
 
 [dependencies]
 
-[dev-dependencies]
-kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git" }
-proptest = "1.5.0"
-
 [target.'cfg(all(target_os = "zkvm", target_vendor = "succinct", target_arch = "riscv32"))'.dependencies]
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "main" }
 
@@ -18,3 +14,12 @@ ark-bn254 = "0.4.0"
 ark-ec = "0.4.2"
 ark-ff = "0.4.2"
 ark-std = "0.4.0"
+
+[dev-dependencies]
+bnum = "0.11.0"
+kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git" }
+proptest = "1.5.0"
+rust-kzg-bn254 = { git = "https://github.com/cherryman/rust-kzg-bn254.git" }
+
+[profile.test]
+inherits = "release"
